[package]
name = "ocd_datalake_rs"
version = "0.2.0"
edition = "2021"
authors = ["Orange Cyberdefense CERT"]
description = "Library wrapper around Orange Cyberdefense's Datalake API"
repository = "https://github.com/cert-orangecyberdefense/ocd-datalake-rs"
readme = "README.md"
license = "MIT"
exclude = [
    ".github/*",
]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
config = "0.13.1"
strum = "0.24"
strum_macros = "0.24"
log = "0.4"

[dev-dependencies]
mockito = "0.31.0"
lazy_static = "1.4.0"
rstest = "0.15.0"